# frds

./: .buildinfo  .pylintrc  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/algorithms/: garch-ccc.doctree  garch-dcc.doctree  garch.doctree  gjr-garch-dcc.doctree  gjr-garch.doctree  index.doctree
.doctrees/datasets/: index.doctree  stock-returns.doctree
.doctrees/measures/: absorption_ratio.doctree  contingent_claim_analysis.doctree  distress_insurance_premium.doctree  index.doctree  kyle_lambda.doctree  lerner_index.doctree  limit_order_book_slope.doctree  long_run_mes.doctree  marginal_expected_shortfall.doctree  option_prices.doctree  probability_of_informed_trading.doctree  spread_and_price_impact.doctree  srisk.doctree  systemic_expected_shortfall.doctree  z_score.doctree
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-deploy-docs.yml  ci.yml  create-release.yml  documentation.yml  publish-to-test-pypi.yml  publish.yml  push-release-to-pypi.yml  test.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/algorithms/: garch-ccc.rst.txt  garch-dcc.rst.txt  gjr-garch.rst.txt
_sources/datasets/: stock-returns.rst.txt
_sources/measures/: distress_insurance_premium.rst.txt  index.rst.txt  kyle_lambda.rst.txt  long_run_mes.rst.txt  marginal_expected_shortfall.rst.txt  option_prices.rst.txt  probability_of_informed_trading.rst.txt  srisk.rst.txt  systemic_expected_shortfall.rst.txt  z_score.rst.txt
_static/css/: custom.css
algorithms/: index.html
datasets/: index.html
docs/: CNAME  configuration.md  getting-started.ipynb  getting-started.md  index.ipynb  index.md  installation.md  measures.md  setup.md  usage.md
docs/api/: index.md
frds/: __init__.py  __main__.py  config.ini  main.py  professor.py  run.py  settings.py  typing.py
genindex/: index.html
includes/: abbreviations.md
measures/: index.html
overrides/: main.html
py-modindex/: index.html
search/: index.html
tests/: test_data.py  test_measures.py  test_wrds.py
(+422 files in other folders)
